Last min copy fixes.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
                     <h3 class="supporting-statement">
-                        You might not be. The Fair Elections Act is making it harder.
+                        You might not be. The Fair Elections Act is making it harder to prove your identity.
                     </h3>
                 </div>
                 
@@ -139,7 +139,7 @@
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
                             <h1 class="center guide-headline">Welcome to our Registration and Voting Guide.</h1>
-                            <p>We encourage everyone to register to vote in advance if they can, as it will be easier to vote on election day if you do so. The deadline for advance registration is <strong>October 13th, 6pm Eastern.</strong></p>
+                            <p>We encourage everyone to register to vote in advance if they can, as it will be easier to vote on election day if you do so. The deadline for advance registration is <strong>October 13th.</strong></p>
                             <button id='toggle-register-section' class="register-button">
                                 Help me get Registered.
                             </button>
@@ -160,8 +160,8 @@
                             <p>These core concepts are poorly explained on the Elections Canada website. Let's examine each in turn:</p> 
 
                             <ul>
-                                <li><strong>Checking your Registration:</strong> If you voted in the last election, reside at the same address and haven't changed your name, then you're probably fine, and the service will simply confirm that you are registered to vote. </li>
-                                <li><strong>Updating your Registration:</strong> In the case that you've moved, you should enter the address that you had when you last voted, <strong>not</strong> your current address. This will kickstart the registration update process. If you've changed your name, you also will need to update, but that will require a paper form.
+                                <li><strong>Checking your Registration:</strong> If you voted in the last election, reside at the same address and haven't changed your name, then you're probably fine, and the online service will simply confirm that you are registered to vote. </li>
+                                <li><strong>Updating your Registration:</strong> In the case that you've moved, use the online service and enter the address that you had when you last voted, <strong>not</strong> your current address. This will kickstart the registration update process. If you've changed your name, you also will need to update, but that will require a paper form.
                                 <li><strong>Registering:</strong> If you have never voted before, you will have to register.</li>
                             </ul>
 
@@ -176,7 +176,7 @@
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                            <p>Registering online is the <strong>most convenient method</strong> of advance registration, <strong>but also has the highest chance of failure.</strong> There are multiple conditions that could stop you from checking, updating or registering online. Read through these first to save yourself the trouble of going through the process only to get confused and frustrated.</p>
+                            <p>Registering online is the <strong>most convenient method</strong> of advance registration, <strong>but also has the highest chance of failure.</strong></p>
                             <h3>Conditions that Could Stop your Online Registration Dead in its Tracks</h3>
                             <ul>
                                 <li>You've changed your name since you last voted.</li>
@@ -216,7 +216,7 @@
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
                             <h2 class="center">Option 2: Advance Registration at your Local Elections Canada Office</h2>
-                            <p>You can register before the October 13th deadline at your local Elections Canada office. The location of your district's office can be obtained using <a href="http://www.elections.ca/Scripts/vis/FindED?L=e&QID=-1&PAGEID=20" target="_blank">this form on the Elections Canada website.</a> The staff at the office should be able to guide you through your registration odyssey in-person.</p>
+                            <p>You can register before the October 13th, 6:00pm deadline at your local Elections Canada office. The location of your district's office can be obtained using <a href="http://www.elections.ca/Scripts/vis/FindED?L=e&QID=-1&PAGEID=20" target="_blank">this form on the Elections Canada website.</a> The staff at the office should be able to guide you through your registration odyssey in-person.</p>
                         </div>
                         <div class="col-sm-1"></div>
                     </div>
@@ -283,14 +283,14 @@
                     <div class="row guide-row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                            <h2 class="guide-headline">Voting ID this year is kind of like Fish &amp; Chips - You can get a 1-piece or a 2-piece</h2>
+                            <h2 class="guide-headline">Voting ID this year is like Fish &amp; Chips - You can get a 1-piece or a 2-piece</h2>
 
                             <ul>
                                 <li> 
                                     <strong>1-Piece:</strong> If you have a driver's license, provinicial or territorial ID card, or any other government card with your photo, name and <strong>current address</strong>, then you're golden. You only need this <strong>one</strong> piece of ID. Of course, the hard part for many people is the fact that their ID doesn't reflect their current address.
                                 </li>
                                 <li>
-                                    <p class="guide-p"><strong>2-Piece:</strong> Elections Canada provides a <a href="http://www.elections.ca/content2.aspx?section=id&document=index&lang=e">very long-winded list</a> of the 39 types of identification that it accepts as one of two pieces of ID. What it doesn't emphasize, however, are the <strong>common pieces that are likely to contain your current address.</strong> Here they are:</p>
+                                    <p class="guide-p"><strong>2-Piece:</strong> Elections Canada provides a <a href="http://www.elections.ca/content2.aspx?section=id&document=index&lang=e" target="_blank">very long-winded list</a> of the 39 types of identification that it accepts as one of two pieces of ID. What it doesn't emphasize, however, are the <strong>common pieces that are likely to contain your current address.</strong> Here they are:</p>
 
                                     <ul class="guide-ul">
                                         <li>Residential lease or sub-lease</li>
@@ -301,13 +301,13 @@
                                         <li>Credit card statement</li>
                                     </ul>
 
-                                    <p>We won't provide the rest of the list here - check out the <a href="http://www.elections.ca/content2.aspx?section=id&document=index&lang=e">official list from Elections Canada.</a> Note that the voter identification card, <strong>despite the fact that Elections Canada itself mails it to you,</strong> and that it contains your address, is no longer accepted as a valid proof of identity.</p>
+                                    <p>We won't provide the rest of the list here - check out the <a href="http://www.elections.ca/content2.aspx?section=id&document=index&lang=e" target="_blank">official list from Elections Canada.</a> Note that the voter identification card, <strong>despite the fact that Elections Canada itself mails it to you,</strong> and that it contains your address, is no longer accepted as a valid proof of identity.</p>
 
                                 </li>
                                 <li>
                                     <p class="guide-p"><strong>Vouching:</strong> This is another major aspect of voter identification that the Fair Elections Act messed with. In the past, one person could vouch for the identities of an unlimited number of others. Now, you can only vouch for <strong>one other person.</strong> This really weakens the ability of vouching - but, if you can't come up with identification one of the above methods, you could still bring a friend and make your vote count.</p>
 
-                                    <p>From the <a href="http://www.elections.ca/content2.aspx?section=id&document=index&lang=e">Elections Canada site</a>: If your ID does not have your current address, take an oath. Show two pieces of ID with your name and have someone who knows you attest to your address. This person must show proof of identity and address, be registered in the same polling division, and attest for only one person.</p>
+                                    <p>From the <a href="http://www.elections.ca/content2.aspx?section=id&document=index&lang=e" target="_blank">Elections Canada site</a>: If your ID does not have your current address, take an oath. Show two pieces of ID with your name and have someone who knows you attest to your address. This person must show proof of identity and address, be registered in the same polling division, and attest for only one person.</p>
                                 </li>
                             </ul>
 
@@ -323,7 +323,7 @@
                             <h2 class="guide-headline">Option 1: Vote at your Riding's Polling Station on Election Day</h2>
                             <ul>
                                 <li><strong>When:</strong> Monday, October 19th, 2015</li>
-                                <li><strong>Where:</strong> If you've <a href="#help-me-register">registered to vote</a>, Elections Canada should send you a Voter Information Card in the mail by October 1st. This will tell you where your riding's polling station is located. If you haven't received your card, you should be able to find your polling station online using <a href="http://www.elections.ca/scripts/vis/FindED?L=e&PAGEID=20" target="_blank">this Elections Canada page</a>. It's still early - they haven't posted that information yet. <a href="https://facebook.com/right2votecanada" target="_blank">Follow us on Facebook</a> - we'll post when that goes live. </li>
+                                <li><strong>Where:</strong> If you've registered to vote, Elections Canada should send you a Voter Information Card in the mail by October 1st. This will tell you where your riding's polling station is located. If you haven't received your card, you should be able to find your polling station online using <a href="http://www.elections.ca/scripts/vis/FindED?L=e&PAGEID=20" target="_blank">this Elections Canada page</a>. It's still early - they haven't posted that information yet.</li>
                             </ul>
                         </div>
                         <div class="col-sm-1"></div>
@@ -347,7 +347,7 @@
                             <h2 class="guide-headline">Option 3: Vote at your Riding's Elections Canada Office in Advance</h2>
                             <ul>
                                 <li><strong>When:</strong> Before October 13th, 2015</li>
-                                <li><strong>Where:</strong> You can find your local Elections Canada Office using <a href="http://www.elections.ca/scripts/vis/FindED?L=e&PAGEID=20">this Elections Canada Page</a>. Unlike the polling stations, the information for the offices is already available. </li>
+                                <li><strong>Where:</strong> You can find your local Elections Canada Office using <a href="http://www.elections.ca/scripts/vis/FindED?L=e&PAGEID=20" target="_blank">this Elections Canada Page</a>. Unlike the polling stations, the information for the offices is already available. </li>
                                 <li><strong>How:</strong> If you were unable to register online, you can kill two birds with one stone: get registered at the office, and cast your vote at the same time.</li>
                             </ul>
                         </div>
@@ -360,10 +360,10 @@
                             <h2 class="guide-headline">Option 4: Vote at a Temporary Elections Canada Office in Advance</h2>
                             <ul>
                                 <li><strong>When:</strong> October 5th, 6th, 7th, 8th</li>
-                                <li><strong>Where:</strong> Elections Canada is launching a <a href="http://www.elections.ca/content.aspx?section=vot&dir=bkg&document=campu&lang=e">pilot project</a> to open offices at select campuses, Friendship Centres and community centres. You can find the full list <a href="http://www.elections.ca/content2.aspx?section=vote&dir=campus&document=index&lang=e">here.</a>
+                                <li><strong>Where:</strong> Elections Canada is launching a <a href="http://www.elections.ca/content.aspx?section=vot&dir=bkg&document=campu&lang=e" target="_blank">pilot project</a> to open offices at select campuses, Friendship Centres and community centres. You can find the full list <a href="http://www.elections.ca/content2.aspx?section=vote&dir=campus&document=index&lang=e" target="_blank">here.</a>
                                 </li>     
                                 <li>
-                                    <strong>How:</strong> This is pretty cool - any eligible voter can use one of these stations to vote, <strong>even if it's not in their riding.</strong> You vote by way of special ballot: votes will count in the riding where the voter's home address is located, <strong>not</strong> the riding that the temporary office is in. If you're living away from your riding, this is a great option.
+                                    <strong>How:</strong> Any eligible voter can use one of these stations to vote, <strong>even if it's not in their riding.</strong> You vote by way of special ballot: votes will count in the riding where the voter's home address is located, <strong>not</strong> the riding that the temporary office is in. If you're living away from your riding, this is a great option.
                                 </li>
                             </ul>
                         </div>
@@ -379,7 +379,7 @@
                                 <li><strong>Where:</strong> Applications happen online, by mail, or at an Elections Canada Office.</a>
                                 </li>     
                                 <li>
-                                    <strong>How:</strong> In order to vote by mail, <a href="http://www.elections.ca/content2.aspx?section=vote&dir=svr&document=index&lang=e" target="_blank">you need to apply to do so.</a> You'll want get on that ASAP - they will mail you a voting kit, and you're going to have to mail it back before the Election happens. This way seems like the most annoying way to vote - but you might have to do it, if you can't access any of the other options.
+                                    <strong>How:</strong> In order to vote by mail, <a href="http://www.elections.ca/content2.aspx?section=vote&dir=svr&document=index&lang=e" target="_blank">you need to apply to do so.</a> You'll want get on that ASAP - they will mail you a voting kit, and you're going to have to mail it back before the Election happens.
                                 </li>
                             </ul>
                         </div>
