Fix new CTA headline styling.

--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
                                <div class="col-md-2"></div>
                                 <div class="col-md-8">
                                     <div class="email-cta-box">
-                                        <h1 class="center">Finding this guide useful?</h1>
+                                        <h1 class="guide-headline">Finding this guide useful?</h1>
 
                                         <button id="facebook-cta-register" class="facebook-button">Support us on <img class="facebook-button-text" src="img/facebook_text.png"></button>
 
-                                        <h2 class="center post-fb-plugin">Help us reach as many Canadians as possible.</h2>
+                                        <h2 class="guide-headline post-fb-plugin">Help us reach as many Canadians as possible.</h2>
                                     </div>
                                 </div>
                                 <div class="col-md-2"></div>
