Switch to an actually live facebook app for JS init (dunno if that actually changes anything). Experiment with NOT showing page posts.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         
         <div id="fb-root"></div>
         <script>(function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4&appId=365643560282363";
-          fjs.parentNode.insertBefore(js, fjs);
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4&appId=620791418015885";
+        fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
 
         <header class="header-navbar navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
@@ -416,7 +416,7 @@
         <div class="fb-area">
             <div class="container">
                 <h3 class="center">Like us on Facebook to stay updated.</h3>
-                <div class="fb-page" data-href="https://www.facebook.com/right2votecanada" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/right2votecanada"><a href="https://www.facebook.com/right2votecanada">Right2Vote</a></blockquote></div></div>
+                <div class="fb-page" data-href="https://www.facebook.com/right2votecanada" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/right2votecanada"><a href="https://www.facebook.com/right2votecanada">Right2Vote</a></blockquote></div></div>
 
             </div>
         </div>
