Add in new graphic for WHO?

--- a/campus.html
+++ b/campus.html
@@ -96,9 +96,9 @@
 
                 <div class="col-sm-4">
                     <h2 class="how-headline">Who</h2>
-                    <center><img class="campus-img" src="img/joan_license.png"></center>
+                    <center><img class="campus-img" src="img/parties.png"></center>
                     <div class="campus-text-container">
-                        <p>Know the name of the candidate you want to vote for. You won't get a list.</p>
+                        <p>Know the name of the candidate you want to vote for. You won't get a list, and you can't use the party name.</p>
                     </div>  
                 </div>
                 <div class="col-sm-4">
