Update the copy on the 3 points.

--- a/campus.html
+++ b/campus.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Right2Vote - Helping Canadians Overcome the Fair Elections Act</title>
+        <title>Right2Vote - Cast your Special Ballot on Campus</title>
         <meta name="description" content="The Fair Elections Act has introduced changes that could affect your ability to vote in the 2015 Canadian Election. Follow our guide to register and to vote.">
         <meta property="og:image" content="http://www.right2vote.ca/img/r2v_fb.png"/>
 
@@ -98,7 +98,7 @@
                     <h2 class="how-headline">Who</h2>
                     <center><img class="campus-img" src="img/parties.png"></center>
                     <div class="campus-text-container">
-                        <p>Know the name of the candidate you want to vote for. You won't get a list, and you can't use the party name.</p>
+                        <p><strong>Know the name</strong> of the candidate you want to vote for. You <strong>won't get a list</strong>, and you <strong>can't use the party name.</strong></p>
                     </div>  
                 </div>
                 <div class="col-md-4">
@@ -107,7 +107,7 @@
                     <div class="campus-text-container">
                         
 
-                        <p>There are 40 stations around the country. Check this <a href="http://www.elections.ca/content2.aspx?section=vote&dir=campus&document=index&lang=e">official list from Elections Canada.</a></p>
+                        <p>There are <strong>40 voting stations</strong> on <strong>campuses + community centres</strong> aross the country. Check out <a href="http://www.elections.ca/content2.aspx?section=vote&dir=campus&document=index&lang=e">Elections Canada's Official List.</a></p>
                     </div>  
                 </div>
             </div>
