--- a/campus/index.html
+++ b/campus/index.html
@@ -12,7 +12,7 @@
         <link rel="icon" type="image/png" href="img/favicon.png">
 
         <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-        <link href="css/styles.css" rel="stylesheet">
+        <link href="../css/styles.css" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300|Roboto:300,300italic,500italic,500' rel='stylesheet' type='text/css'>
     </head>
@@ -149,26 +149,15 @@
         </div> 
 
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="bower_components/jquery/dist/jquery.min.js"></script>
-        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="js/detectmobilebrowser.js"></script>
-        <script src="js/min/cta-min.js"></script>
-        <script src="bower_components/bootstrap/js/collapse.js"></script>
-        <script src="bower_components/jquery.countdown/dist/jquery.countdown.min.js"></script>
-        <script src="bower_components/FitVids/jquery.fitvids.js"></script>
+        <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="../bower_components/bootstrap/js/collapse.js"></script>
+        <script src="../bower_components/FitVids/jquery.fitvids.js"></script>
         <script>
             //FITVIDS INIT
             $(document).ready(function(){
                 // Target your .container, .wrapper, .post, etc.
                 $(".fitvid").fitVids();
-            });
-
-            //COUNTDOWN INIT
-            $("#registration-countdown")
-            .countdown("2015/10/19", function(event) {
-                $(this).text(
-                    event.strftime('%D days, %H hours, %M mins, %S seconds')
-                );
             });
         </script>
     </body>
