Fix links in campus page.

--- a/campus/index.html
+++ b/campus/index.html
@@ -11,9 +11,8 @@
 
         <link rel="icon" type="image/png" href="img/favicon.png">
 
-        <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+        <link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
         <link href="../css/styles.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300|Roboto:300,300italic,500italic,500' rel='stylesheet' type='text/css'>
     </head>
     <body>
@@ -35,7 +34,7 @@
         }(document, 'script', 'facebook-jssdk'));</script>
 
         <header class="header-navbar navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
-            <a href="./"><img class="navbar-logo" src="img/r2v.png"></img></a>
+            <a href="./"><img class="navbar-logo" src="../img/r2v.png"></img></a>
             <div class="fb-nav">
                 <div class="fb-like" data-href="https://facebook.com/right2votecanada" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
             </div>
@@ -87,7 +86,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 class="how-headline">How</h2>
-                    <center><img class="campus-img" src="img/joan_license.png"></center>
+                    <center><img class="campus-img" src="../img/joan_license.png"></center>
                         <div class="campus-text-container">
                             <!--<img class="campus-img" src="img/joan_license.png">-->
                             <p>Make your vote count <strong>where you're from, not where your school is.</strong> Use your ID or Driver's License from home!</p>
@@ -96,14 +95,14 @@
 
                 <div class="col-md-4">
                     <h2 class="how-headline">Who</h2>
-                    <center><img class="campus-img" src="img/parties.png"></center>
+                    <center><img class="campus-img" src="../img/parties.png"></center>
                     <div class="campus-text-container">
                         <p><strong>Know the name</strong> of the candidate you want to vote for. You <strong>won't get a list</strong>, and you <strong>can't use the party name.</strong></p>
                     </div>  
                 </div>
                 <div class="col-md-4">
                     <h2 class="where-headline">Whr</h2>
-                    <center><img class="campus-img" src="img/locations.png"></center>
+                    <center><img class="campus-img" src="../img/locations.png"></center>
                     <div class="campus-text-container">
                         
 
@@ -133,15 +132,15 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xs-4">
-                        <a href="http://thinkrad.net" target="_blank"><img class="footer-thinkrad" src="img/thinkrad.png"></img></a>
+                        <a href="http://thinkrad.net" target="_blank"><img class="footer-thinkrad" src="../img/thinkrad.png"></img></a>
                     </div>
                     <div class="col-xs-4">
-                        <a href="ThinkRadPrivacyPolicy.pdf" target="_blank"><img class="footer-right2vote" src="img/right2vote.png"></img>
+                        <a href="ThinkRadPrivacyPolicy.pdf" target="_blank"><img class="footer-right2vote" src="../img/right2vote.png"></img>
                         <div class="footer-privacy-policy">Privacy Policy</div></a>
                     </div>
                     <div class="col-xs-4">
                         <div class="right-side-footer">
-                             <a href="http://clouda.ca" target="_blank"><img class="footer-clouda" src="img/clouda.png"></img></a>
+                             <a href="http://clouda.ca" target="_blank"><img class="footer-clouda" src="../img/clouda.png"></img></a>
                         </div>
                     </div>
                 </div>
