--- a/campus/index.html
+++ b/campus/index.html
@@ -7,13 +7,14 @@
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>Right2Vote - Cast your Special Ballot on Campus</title>
         <meta name="description" content="The Fair Elections Act has introduced changes that could affect your ability to vote in the 2015 Canadian Election. Follow our guide to register and to vote.">
-        <meta property="og:image" content="http://www.right2vote.ca/img/r2v_fb.png"/>
+        <meta property="og:image" content="http://www.right2vote.ca/img/who-how-whr-fb.png"/>
+        
 
         <link rel="icon" type="image/png" href="img/favicon.png">
 
         <link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
         <link href="../css/styles.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300|Roboto:300,300italic,500italic,500' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300|o:300,300italic,500italic,500' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-T8J4R2"
