--- a/campus/index.html
+++ b/campus/index.html
@@ -14,7 +14,7 @@
 
         <link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
         <link href="../css/styles.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300|o:300,300italic,500italic,500' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300|Roboto:300,300italic,500italic,500' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-T8J4R2"
