Fix meta description.

--- a/campus/index.html
+++ b/campus/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>Right2Vote - Cast your Special Ballot on Campus</title>
-        <meta name="description" content="The Fair Elections Act has introduced changes that could affect your ability to vote in the 2015 Canadian Election. Follow our guide to register and to vote.">
+        <meta name="description" content="There will be temporary Elections Canada offices open at 40 campuses around the country from Oct 5-8. Take this opportunity to cast a special ballot, and vote in your home riding!">
         <meta property="og:image" content="http://www.right2vote.ca/img/who-how-whr-fb.png"/>
         
 
