Fix missing favicon

--- a/campus/index.html
+++ b/campus/index.html
@@ -10,7 +10,7 @@
         <meta property="og:image" content="http://www.right2vote.ca/img/who-how-whr-fb.png"/>
         
 
-        <link rel="icon" type="image/png" href="img/favicon.png">
+        <link rel="icon" type="image/png" href="../img/favicon.png">
 
         <link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
         <link href="../css/styles.css" rel="stylesheet">
