Update to the CTA. Make it prettier / more focused.

--- a/campus/index.html
+++ b/campus/index.html
@@ -121,8 +121,13 @@
                 <center>
                 <div class="fb-page" data-href="https://www.facebook.com/right2votecanada" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/right2votecanada"><a href="https://www.facebook.com/right2votecanada">Right2Vote</a></blockquote></div></div>
                 </center>
-                <div class="campus-text-container">
-                    <p class="post-fb-text">Confused? So are we! (jk jk) <strong>Message us on facebook</strong>. We're super responsive :^)</p>
+                <div class="fb-container">
+                    <p class="post-fb-text">Need help?<br /> 
+                        <strong>Message us on facebook</strong>.<br/>
+                        We're super responsive!</p>
+                    
+                        <button id="facebook-cta" class="facebook-button"><img class="facebook-button-r2v" src="../img/r2v_icon_circle.png"> on <img class="facebook-button-text" src="../img/facebook_text.png"></button>
+
                 </div>
             </div>
         </div>
@@ -151,6 +156,8 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="../bower_components/jquery/dist/jquery.min.js"></script>
         <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="js/detectmobilebrowser.js"></script>
+        <script src="js/min/cta-min.js"></script>
         <script src="../bower_components/bootstrap/js/collapse.js"></script>
         <script src="../bower_components/FitVids/jquery.fitvids.js"></script>
         <script>
