--- a/campus/index.html
+++ b/campus/index.html
@@ -156,8 +156,8 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="../bower_components/jquery/dist/jquery.min.js"></script>
         <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="js/detectmobilebrowser.js"></script>
-        <script src="js/min/cta-min.js"></script>
+        <script src="../js/detectmobilebrowser.js"></script>
+        <script src="../js/min/cta-min.js"></script>
         <script src="../bower_components/bootstrap/js/collapse.js"></script>
         <script src="../bower_components/FitVids/jquery.fitvids.js"></script>
         <script>
