Update facebook meta tags.

--- a/campus/index.html
+++ b/campus/index.html
@@ -5,10 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Right2Vote - Cast your Special Ballot on Campus</title>
-        <meta name="description" content="There will be temporary Elections Canada offices open at 40 campuses, community + friendship centres around the country from Oct 5-8. Take this opportunity to cast a special ballot, and vote in your home riding!">
-        <meta property="og:image" content="http://www.right2vote.ca/img/who-how-whr-fb.png"/>
+        <title>right2vote.ca - Cast your Ballot on Campus, Sidestep Fair Elections Act</title>
+        <meta name="description" content="Campus voting stations (Oct 5-8) are an opportunity to sidestep Fair Elections Act ID issues. Vote where you're from, not where your campus is.">
         
+        <meta property="og:site_name" content="right2vote.ca" />
+        <meta property="og:title" content="Cast your Ballot on Campus, Sidestep Fair Elections Act" />
+        <meta property="og:image" content="http://www.right2vote.ca/img/who-how-whr-fb.png"/>
+        <meta property="og:url" content="http://www.right2vote.ca/campus" />
+        <meta property="og:type" content="website" /> 
+        <meta name="og:description" content="Campus voting stations (Oct 5-8) are an opportunity to sidestep Fair Elections Act ID issues. Vote where you're from, not where your campus is.">
 
         <link rel="icon" type="image/png" href="../img/favicon.png">
 
