Fix up meta tags to include the r2v app ID, and fix up the main page meta tags also.

--- a/campus/index.html
+++ b/campus/index.html
@@ -8,11 +8,12 @@
         <title>right2vote.ca - Cast your Ballot on Campus, Sidestep Fair Elections Act</title>
         <meta name="description" content="Campus voting stations (Oct 5-8) are an opportunity to sidestep Fair Elections Act ID issues. Vote where you're from, not where your campus is.">
         
+        <meta property="og:app_id" content="1668424770058891" />
         <meta property="og:site_name" content="right2vote.ca" />
         <meta property="og:title" content="Cast your Ballot on Campus, Sidestep Fair Elections Act" />
         <meta property="og:image" content="http://www.right2vote.ca/img/who-how-whr-fb.png"/>
         <meta property="og:type" content="website" /> 
-        <meta name="og:description" content="Campus voting stations (Oct 5-8) are an opportunity to sidestep Fair Elections Act ID issues. Vote where you're from, not where your campus is.">
+        <meta property="og:description" content="Campus voting stations (Oct 5-8) are an opportunity to sidestep Fair Elections Act ID issues. Vote where you're from, not where your campus is.">
 
         <link rel="icon" type="image/png" href="../img/favicon.png">
 
@@ -34,7 +35,7 @@
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
         js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4&appId=620791418015885";
+        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4&appId=1668424770058891";
         fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
 
