Fix app_id tags.

--- a/campus/index.html
+++ b/campus/index.html
@@ -8,7 +8,7 @@
         <title>right2vote.ca - Cast your Ballot on Campus, Sidestep Fair Elections Act</title>
         <meta name="description" content="Campus voting stations (Oct 5-8) are an opportunity to sidestep Fair Elections Act ID issues. Vote where you're from, not where your campus is.">
         
-        <meta property="og:app_id" content="1668424770058891" />
+        <meta property="fb:app_id" content="1668424770058891" />
         <meta property="og:site_name" content="right2vote.ca" />
         <meta property="og:title" content="Cast your Ballot on Campus, Sidestep Fair Elections Act" />
         <meta property="og:image" content="http://www.right2vote.ca/img/who-how-whr-fb.png"/>
