--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="The Fair Elections Act has introduced changes that could affect your ability to vote in the 2015 Canadian Election. Follow our guide to register and to vote.">
         
         
-        <meta property="og:app_id" content="1668424770058891" />
+        <meta property="fb:app_id" content="1668424770058891" />
         <meta property="og:site_name" content="right2vote.ca" />
         <meta property="og:title" content="Helping Canadians Navigate the Fair Elections Act ID Requirements" />
         <meta property="og:image" content="http://www.right2vote.ca/img/r2v_fb.png"/>
