Nudge a couple of details around.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>right2vote.ca - Helping Canadians Navigate the Fair Elections Act ID Requirements</title>
+        <title>right2vote.ca - Navigate the ID Requirements from the Fair Elections Act</title>
         <meta name="description" content="The Fair Elections Act has introduced changes that could affect your ability to vote in the 2015 Canadian Election. Follow our guide to register and to vote.">
         
         
         <meta property="fb:app_id" content="1668424770058891" />
         <meta property="og:site_name" content="right2vote.ca" />
-        <meta property="og:title" content="Helping Canadians Navigate the Fair Elections Act ID Requirements" />
+        <meta property="og:title" content="Helping Canadians Navigate the Fair Elections Act" />
         <meta property="og:image" content="http://www.right2vote.ca/img/r2v_fb.png"/>
         <meta property="og:type" content="website" /> 
         <meta property="og:description" content="The Fair Elections Act has introduced changes that could affect your ability to vote in the 2015 Canadian Election. Follow our guide to register and to vote.">
