Add CTA to homepage for students. Add *** to campus page.

--- a/index.html
+++ b/index.html
@@ -73,9 +73,13 @@
                 </div>
 
 
-                <!--<p class="urgency-statement" id="urgency-statement">
-                    There are only <strong id="registration-countdown"></strong> left until Election Day (<strong>October 19th</strong>).
-                </p>-->
+                <p class="urgency-statement" id="urgency-statement">
+                    <strong>This week only (October 5-8):</strong> Many Students can Sidestep Fair Elections Act
+                </p>
+                
+                <button class="campus-button" id="campus-button">
+                    Find out How
+                </button>
             </div>
         </div>
         <div class="container-fluid tablet-up">
