--- a/campus/index.html
+++ b/campus/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>right2vote.ca - Cast your Ballot on Campus, Sidestep Fair Elections Act</title>
+        <title>Right to Vote - Cast your Ballot on Campus, Sidestep Fair Elections Act</title>
         <meta name="description" content="Campus voting stations (Oct 5-8) are an opportunity to sidestep Fair Elections Act ID issues. Vote where you're from, not where your campus is.">
         
         <meta property="fb:app_id" content="1668424770058891" />
