Fix the ID link.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <h2 class="id-headline">2-Piece</h2>
                     <center><img class="campus-img" src="img/two-piece.png"></center>
                     <div class="campus-text-container">
-                        <p>Old address on your Driver's License? Use your <strong>lease</strong>, a <strong>utility bill</strong>, or a <strong>bank statement</strong> to prove your new address. <a href="#">Get the full 39-option list is here.</a> </p>
+                        <p>Old address on your Driver's License? Use your <strong>lease</strong>, a <strong>utility bill</strong>, or a <strong>bank statement</strong> to prove your new address. <a href="http://www.elections.ca/content2.aspx?section=id&document=index&lang=e">Get the full 39-option list is here.</a> </p>
                     </div>  
                 </div>
                 <div class="col-md-4">
