Correct riding vs. polling station discrepancy.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <h2 class="id-headline">Vouch</h2>
                     <center><img class="campus-img" src="img/vouch.png"></center>
                     <div class="campus-text-container">
-                        Get someone who's <strong>in your riding</strong> and can <strong>prove their identity &amp; address</strong> to <strong>vouch for you</strong> at the polling station. You can only vouch for one other person.
+                        Get someone who's in your polling division (<strong>not</strong> your riding - <a target="_blank" href="http://www.elections.ca/content2.aspx?section=id&document=index&lang=e#q5">polling divisions are even more strictly defined</a>) and can <strong>prove their identity &amp; address</strong> to <strong>vouch for you</strong> at the polling station. You can only vouch for one other person.
                     </div>  
                 </div>
             </div>
